rename notes, add sicp-notes

--- a/cp-notes.tex
+++ b/cp-notes.tex
@@ -1,4 +1,4 @@
-\documentclass{cpnote}
+\documentclass{notes}
 
 \begin{document}
 \title{Notes for competitive programming}
@@ -107,6 +107,8 @@ int fast_div(int a, int b) {
 Stack follows the \emph{LIFO} (Last In First Out) principle. \\
 When a new element is inserted, it will be put first. Similarly, 
 Last element added is the first element to be removed. \\
+
+\textbf{Functions}: .pop(), .first(), empty(), size(), .push() 
 
 \section{Useful snippets}
 \subsection{Fast input/output}
